correction import template dans docs

--- a/docs/doctech.adoc
+++ b/docs/doctech.adoc
@@ -1,5 +1,5 @@
 = DOCUMENTATION TECHNIQUE
-include::template/params.adoc[]
+include::https://github.com/AlbiMousse/sae-raviv-5.A.01/blob/main/docs/template/params.adoc[]
 
 == 1. Présentation de l'application
 == 2. Architecture
@@ -8,4 +8,4 @@ include::template/params.adoc[]
 
 ---
 
-include::template/footer.adoc[]
+include::https://github.com/AlbiMousse/sae-raviv-5.A.01/blob/main/docs/template/footer.adoc[]
